src/test/ui/parser/bad-value-ident-false.stderr
error: expected identifier, found keyword `false`
  --> $DIR/bad-value-ident-false.rs:1:4
   |
LL | fn false() { }
   |    ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | fn r#false() { }
   |    ^^^^^^^

error: aborting due to previous error

